--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,27 @@
   <head>
     <meta charset="utf-8">
     <title>Assignment 3</title>
-    <!-- TODO: add styling -->
+    <link href="styles.css" rel="stylesheet">
+    <meta charset="UTF-8">
   </head>
   <body>
-    <p>Your fingerprint is: <code id=fingerprint>[loading]</code></p>
-    <script src="hash.js"></script>
-    <script src="fingerprint.js"></script>
-    <script>
-      // TODO: populate document.getElementById("fingerprint").innerText
+    <script src="hash.js" type="text/javascript" ></script>
+    <script ></script>
+    <div class="container">
+      <div class="row">
+        <h1 class="text-container lg-text">Hi! &#128075;</h1>
+      </div>
+      <h2 class="text-container md-text">Think you're unique? <br/> Your fingerprint is... </h2>
+      <div class="row">
+        <h3 class="text-container sm-text">&#128073; &nbsp;
+          <code id="fingerprint">[loading]</code>
+        </h3>
+      </div>
+    </div>
+
+    <script src="/fingerprint.js" type="text/javascript">
+      console.log('TODO')
+      document.getElementById("fingerprint").innerText = fingerprint();
     </script>
   </body>
 </html>
