--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,9 @@
     <meta charset="UTF-8">
   </head>
   <body>
-    <script src="hash.js" type="text/javascript" ></script>
+    <script src="hash.js" type="text/javascript"></script>
+    <script src="/fingerprint.js" type="text/javascript"></script>
+
     <script ></script>
     <div class="container">
       <div class="row">
@@ -21,8 +23,7 @@
       </div>
     </div>
 
-    <script src="/fingerprint.js" type="text/javascript">
-      console.log('TODO')
+    <script type="text/javascript">
       document.getElementById("fingerprint").innerText = fingerprint();
     </script>
   </body>
