--- a/public/index.html
+++ b/public/index.html
@@ -3,27 +3,20 @@
   <head>
     <meta charset="utf-8">
     <title>Assignment 3</title>
-    <link href="styles.css" rel="stylesheet">
-    <meta charset="UTF-8">
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <script src="hash.js" type="text/javascript"></script>
-    <script src="/fingerprint.js" type="text/javascript"></script>
+    <main class="container">
+      <h1 class="text-container lg-text">Hi! &#128075;</h1>
+      <h2 class="text-container md-text">Think you're unique? <br> Your fingerprint is... </h2>
+      <h3 class="text-container sm-text">&#128073; &nbsp;
+        <code id="fingerprint">[loading]</code>
+      </h3>
+    </main>
 
-    <script ></script>
-    <div class="container">
-      <div class="row">
-        <h1 class="text-container lg-text">Hi! &#128075;</h1>
-      </div>
-      <h2 class="text-container md-text">Think you're unique? <br/> Your fingerprint is... </h2>
-      <div class="row">
-        <h3 class="text-container sm-text">&#128073; &nbsp;
-          <code id="fingerprint">[loading]</code>
-        </h3>
-      </div>
-    </div>
-
-    <script type="text/javascript">
+    <script src="/hash.js"></script>
+    <script src="/fingerprint.js"></script>
+    <script>
       fingerprint().then(result => {
         document.getElementById("fingerprint").innerText = result;
       })
