Use existing SipHash library

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
       </h3>
     </main>
 
+    <script src="https://cdn.jsdelivr.net/npm/siphash@1.1.0/lib/siphash.js" integrity="sha256-a2LbIahpL5U4NtgcTL73QzB51fZRD45H2kZD8w+wUWE=" crossorigin="anonymous"></script>
     <script src="/hash.js"></script>
     <script src="/fingerprint.js"></script>
     <script>
